syntax = "proto3";

package cunicu.core;
option go_package = "github.com/stv0g/cunicu/pkg/proto/core";

import "common.proto";
import "feature/epdisc.proto";

enum ReachabilityType {
    UNSPECIFIED_REACHABILITY_TYPE = 0;
	NONE = 1;
	DIRECT = 2;
	RELAYED = 3;
	RELAYED_BIDIR = 4;
	ROUTED = 5;
}

message Peer {
    string name = 1;

    // Public WireGuard X25519 key
    bytes public_key = 2;
    bytes preshared_key = 3;

    // List of allowed IPs
    repeated string allowed_ips = 4;

    uint32 persistent_keepalive_interval = 5;

    // Timestamps
    Timestamp last_handshake_timestamp = 6;
    Timestamp last_receive_timestamp = 7;
    Timestamp last_transmit_timestamp = 8;

    // Trafic counters
    int64 transmit_bytes = 9;
    int64 receive_bytes = 10;

    // WireGuard endpoint address
    string endpoint = 11;

    // WireGuard protocol version
    uint32 protocol_version = 12;

    epdisc.Peer ice = 13;

    ReachabilityType reachability = 14;
}
