syntax = "proto3";

package wice.rpc;
option go_package = "riasc.eu/wice/pkg/proto/rpc";

import "common.proto";
import "core/interface.proto";

message StatusResp {
    repeated Interface interfaces = 1;
}

message StatusParams {
    string intf = 1;
    bytes peer = 2;
}

service Watcher {
    rpc Sync(Empty) returns (Empty) {}

    rpc GetStatus(StatusParams) returns (StatusResp) {}
}